gen/PhraseForgeParser.java
// Generated from C:/Users/dsanghv3/IdeaProjects/SER502-Spring2023-Team13/src/main/Antlr\PhraseForge.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PhraseForgeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, PHRASE_NUM=30, PHRASE_BOOL=31, 
		Addition=32, Subtraction=33, Multiplication=34, Division=35, Logical_AND=36, 
		Logical_OR=37, LesserThan=38, GreaterThan=39, LesserThanOrEqualTo=40, 
		GreaterThanOrEqualTo=41, NotEqualTo=42, EqualTo=43, FORGE_VAR=44, PHRASE_STR=45, 
		EQT=46, FORGE_SPACES=47, FORGE_COMMENT=48;
	public static final int
		RULE_forge_pgm = 0, RULE_phrase_blk = 1, RULE_forge_cmd = 2, RULE_forge_asrt = 3, 
		RULE_asrts = 4, RULE_asrt_bool = 5, RULE_asrt_cmp = 6, RULE_asrt_num = 7, 
		RULE_asrt_eval = 8, RULE_forge_if = 9, RULE_else_forge_if = 10, RULE_forge_else = 11, 
		RULE_forge_while = 12, RULE_echo_forge = 13, RULE_forge_enh = 14, RULE_forgeRange = 15, 
		RULE_forge_loop = 16, RULE_forge_var = 17, RULE_dec_asrt = 18, RULE_inc_asrt = 19, 
		RULE_asrt_tern = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"forge_pgm", "phrase_blk", "forge_cmd", "forge_asrt", "asrts", "asrt_bool", 
			"asrt_cmp", "asrt_num", "asrt_eval", "forge_if", "else_forge_if", "forge_else", 
			"forge_while", "echo_forge", "forge_enh", "forgeRange", "forge_loop", 
			"forge_var", "dec_asrt", "inc_asrt", "asrt_tern"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'pf_launch'", "'pf_abort'", "'{'", "'}'", "'quant'", "'logic'", 
			"'phrase'", "'('", "')'", "'test'", "'forge-test'", "'routeTest'", "'forge-routeTest'", 
			"'route'", "'forge-route'", "'while'", "'forge-while'", "'reveal'", "','", 
			"'for'", "'in'", "'the'", "'range'", "';;'", "'forge-for'", "'--'", "'++'", 
			"'??'", "'::'", null, null, "'+'", "'-'", "'*'", "'/'", "'$&'", "'$|'", 
			"'$<'", "'$>'", "'$<='", "'$>='", "'$!='", "'$=='", null, null, "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "PHRASE_NUM", "PHRASE_BOOL", "Addition", 
			"Subtraction", "Multiplication", "Division", "Logical_AND", "Logical_OR", 
			"LesserThan", "GreaterThan", "LesserThanOrEqualTo", "GreaterThanOrEqualTo", 
			"NotEqualTo", "EqualTo", "FORGE_VAR", "PHRASE_STR", "EQT", "FORGE_SPACES", 
			"FORGE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PhraseForge.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PhraseForgeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Forge_pgmContext extends ParserRuleContext {
		public Phrase_blkContext phrase_blk() {
			return getRuleContext(Phrase_blkContext.class,0);
		}
		public Forge_pgmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forge_pgm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).enterForge_pgm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).exitForge_pgm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhraseForgeVisitor ) return ((PhraseForgeVisitor<? extends T>)visitor).visitForge_pgm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Forge_pgmContext forge_pgm() throws RecognitionException {
		Forge_pgmContext _localctx = new Forge_pgmContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_forge_pgm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(43);
			phrase_blk();
			setState(44);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Phrase_blkContext extends ParserRuleContext {
		public List<Forge_cmdContext> forge_cmd() {
			return getRuleContexts(Forge_cmdContext.class);
		}
		public Forge_cmdContext forge_cmd(int i) {
			return getRuleContext(Forge_cmdContext.class,i);
		}
		public Phrase_blkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phrase_blk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).enterPhrase_blk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).exitPhrase_blk(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhraseForgeVisitor ) return ((PhraseForgeVisitor<? extends T>)visitor).visitPhrase_blk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Phrase_blkContext phrase_blk() throws RecognitionException {
		Phrase_blkContext _localctx = new Phrase_blkContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_phrase_blk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(T__2);
			setState(48); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(47);
				forge_cmd();
				}
				}
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 17592187421920L) != 0) );
			setState(52);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Forge_cmdContext extends ParserRuleContext {
		public Forge_ifContext forge_if() {
			return getRuleContext(Forge_ifContext.class,0);
		}
		public Forge_whileContext forge_while() {
			return getRuleContext(Forge_whileContext.class,0);
		}
		public Forge_enhContext forge_enh() {
			return getRuleContext(Forge_enhContext.class,0);
		}
		public Forge_loopContext forge_loop() {
			return getRuleContext(Forge_loopContext.class,0);
		}
		public Echo_forgeContext echo_forge() {
			return getRuleContext(Echo_forgeContext.class,0);
		}
		public Forge_asrtContext forge_asrt() {
			return getRuleContext(Forge_asrtContext.class,0);
		}
		public Forge_cmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forge_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).enterForge_cmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).exitForge_cmd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhraseForgeVisitor ) return ((PhraseForgeVisitor<? extends T>)visitor).visitForge_cmd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Forge_cmdContext forge_cmd() throws RecognitionException {
		Forge_cmdContext _localctx = new Forge_cmdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_forge_cmd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(54);
				forge_if();
				}
				break;
			case 2:
				{
				setState(55);
				forge_while();
				}
				break;
			case 3:
				{
				setState(56);
				forge_enh();
				}
				break;
			case 4:
				{
				setState(57);
				forge_loop();
				}
				break;
			case 5:
				{
				setState(58);
				echo_forge();
				}
				break;
			case 6:
				{
				setState(59);
				forge_asrt();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Forge_asrtContext extends ParserRuleContext {
		public TerminalNode FORGE_VAR() { return getToken(PhraseForgeParser.FORGE_VAR, 0); }
		public TerminalNode EQT() { return getToken(PhraseForgeParser.EQT, 0); }
		public Asrt_numContext asrt_num() {
			return getRuleContext(Asrt_numContext.class,0);
		}
		public Asrt_ternContext asrt_tern() {
			return getRuleContext(Asrt_ternContext.class,0);
		}
		public Asrt_boolContext asrt_bool() {
			return getRuleContext(Asrt_boolContext.class,0);
		}
		public TerminalNode PHRASE_STR() { return getToken(PhraseForgeParser.PHRASE_STR, 0); }
		public Forge_asrtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forge_asrt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).enterForge_asrt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).exitForge_asrt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhraseForgeVisitor ) return ((PhraseForgeVisitor<? extends T>)visitor).visitForge_asrt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Forge_asrtContext forge_asrt() throws RecognitionException {
		Forge_asrtContext _localctx = new Forge_asrtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_forge_asrt);
		int _la;
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(T__4);
				setState(63);
				match(FORGE_VAR);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQT) {
					{
					setState(64);
					match(EQT);
					setState(65);
					asrt_num(0);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				match(T__4);
				setState(69);
				match(FORGE_VAR);
				setState(70);
				match(EQT);
				setState(71);
				asrt_tern();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				match(T__5);
				setState(73);
				match(FORGE_VAR);
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQT) {
					{
					setState(74);
					match(EQT);
					setState(75);
					asrt_bool(0);
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				match(T__5);
				setState(79);
				match(FORGE_VAR);
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQT) {
					{
					setState(80);
					match(EQT);
					setState(81);
					asrt_tern();
					}
				}

				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				match(T__6);
				setState(85);
				match(FORGE_VAR);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQT) {
					{
					setState(86);
					match(EQT);
					setState(87);
					match(PHRASE_STR);
					}
				}

				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				match(T__6);
				setState(91);
				match(FORGE_VAR);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQT) {
					{
					setState(92);
					match(EQT);
					setState(93);
					match(PHRASE_STR);
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(96);
				match(FORGE_VAR);
				setState(97);
				match(EQT);
				setState(98);
				asrt_num(0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(99);
				match(FORGE_VAR);
				setState(100);
				match(EQT);
				setState(101);
				asrt_bool(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsrtsContext extends ParserRuleContext {
		public Asrt_numContext asrt_num() {
			return getRuleContext(Asrt_numContext.class,0);
		}
		public Asrt_boolContext asrt_bool() {
			return getRuleContext(Asrt_boolContext.class,0);
		}
		public AsrtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asrts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).enterAsrts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).exitAsrts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhraseForgeVisitor ) return ((PhraseForgeVisitor<? extends T>)visitor).visitAsrts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsrtsContext asrts() throws RecognitionException {
		AsrtsContext _localctx = new AsrtsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_asrts);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				asrt_num(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				asrt_bool(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Asrt_boolContext extends ParserRuleContext {
		public Token op;
		public Asrt_cmpContext asrt_cmp() {
			return getRuleContext(Asrt_cmpContext.class,0);
		}
		public List<Asrt_boolContext> asrt_bool() {
			return getRuleContexts(Asrt_boolContext.class);
		}
		public Asrt_boolContext asrt_bool(int i) {
			return getRuleContext(Asrt_boolContext.class,i);
		}
		public TerminalNode PHRASE_BOOL() { return getToken(PhraseForgeParser.PHRASE_BOOL, 0); }
		public TerminalNode FORGE_VAR() { return getToken(PhraseForgeParser.FORGE_VAR, 0); }
		public TerminalNode Logical_AND() { return getToken(PhraseForgeParser.Logical_AND, 0); }
		public TerminalNode Logical_OR() { return getToken(PhraseForgeParser.Logical_OR, 0); }
		public TerminalNode EqualTo() { return getToken(PhraseForgeParser.EqualTo, 0); }
		public TerminalNode NotEqualTo() { return getToken(PhraseForgeParser.NotEqualTo, 0); }
		public Asrt_boolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asrt_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).enterAsrt_bool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).exitAsrt_bool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhraseForgeVisitor ) return ((PhraseForgeVisitor<? extends T>)visitor).visitAsrt_bool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asrt_boolContext asrt_bool() throws RecognitionException {
		return asrt_bool(0);
	}

	private Asrt_boolContext asrt_bool(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Asrt_boolContext _localctx = new Asrt_boolContext(_ctx, _parentState);
		Asrt_boolContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_asrt_bool, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(109);
				asrt_cmp();
				}
				break;
			case 2:
				{
				setState(110);
				match(T__7);
				setState(111);
				asrt_bool(0);
				setState(112);
				match(T__8);
				}
				break;
			case 3:
				{
				setState(114);
				match(PHRASE_BOOL);
				}
				break;
			case 4:
				{
				setState(115);
				match(FORGE_VAR);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(124);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
					case 1:
						{
						_localctx = new Asrt_boolContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_asrt_bool);
						setState(118);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(119);
						((Asrt_boolContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==Logical_AND || _la==Logical_OR) ) {
							((Asrt_boolContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(120);
						asrt_bool(7);
						}
						break;
					case 2:
						{
						_localctx = new Asrt_boolContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_asrt_bool);
						setState(121);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(122);
						((Asrt_boolContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==NotEqualTo || _la==EqualTo) ) {
							((Asrt_boolContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(123);
						asrt_bool(6);
						}
						break;
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Asrt_cmpContext extends ParserRuleContext {
		public Token op;
		public List<Asrt_numContext> asrt_num() {
			return getRuleContexts(Asrt_numContext.class);
		}
		public Asrt_numContext asrt_num(int i) {
			return getRuleContext(Asrt_numContext.class,i);
		}
		public TerminalNode GreaterThan() { return getToken(PhraseForgeParser.GreaterThan, 0); }
		public TerminalNode LesserThan() { return getToken(PhraseForgeParser.LesserThan, 0); }
		public TerminalNode GreaterThanOrEqualTo() { return getToken(PhraseForgeParser.GreaterThanOrEqualTo, 0); }
		public TerminalNode LesserThanOrEqualTo() { return getToken(PhraseForgeParser.LesserThanOrEqualTo, 0); }
		public TerminalNode EqualTo() { return getToken(PhraseForgeParser.EqualTo, 0); }
		public TerminalNode NotEqualTo() { return getToken(PhraseForgeParser.NotEqualTo, 0); }
		public Asrt_cmpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asrt_cmp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).enterAsrt_cmp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).exitAsrt_cmp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhraseForgeVisitor ) return ((PhraseForgeVisitor<? extends T>)visitor).visitAsrt_cmp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asrt_cmpContext asrt_cmp() throws RecognitionException {
		Asrt_cmpContext _localctx = new Asrt_cmpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_asrt_cmp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			asrt_num(0);
			setState(130);
			((Asrt_cmpContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 17317308137472L) != 0)) ) {
				((Asrt_cmpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(131);
			asrt_num(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Asrt_numContext extends ParserRuleContext {
		public Token op;
		public List<Asrt_numContext> asrt_num() {
			return getRuleContexts(Asrt_numContext.class);
		}
		public Asrt_numContext asrt_num(int i) {
			return getRuleContext(Asrt_numContext.class,i);
		}
		public TerminalNode PHRASE_NUM() { return getToken(PhraseForgeParser.PHRASE_NUM, 0); }
		public TerminalNode Subtraction() { return getToken(PhraseForgeParser.Subtraction, 0); }
		public TerminalNode FORGE_VAR() { return getToken(PhraseForgeParser.FORGE_VAR, 0); }
		public TerminalNode Multiplication() { return getToken(PhraseForgeParser.Multiplication, 0); }
		public TerminalNode Division() { return getToken(PhraseForgeParser.Division, 0); }
		public TerminalNode Addition() { return getToken(PhraseForgeParser.Addition, 0); }
		public Asrt_numContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asrt_num; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).enterAsrt_num(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PhraseForgeListener ) ((PhraseForgeListener)listener).exitAsrt_num(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PhraseForgeVisitor ) return ((PhraseForgeVisitor<? extends T>)visitor).visitAsrt_num(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Asrt_numContext asrt_num() throws RecognitionException {
		return asrt_num(0);
	}

	private Asrt_numContext asrt_num(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Asrt_numContext _localctx = new Asrt_numContext(_ctx, _parentState);
		Asrt_numContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_asrt_num, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(134);
				match(T__7);
				setState(135);
				asrt_num(0);
				setState(136);
				match(T__8);
				}
				break;
			case 2:
				{
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Subtraction) {
					{
					setState(138);
					match(Subtraction);
					}
				}

				setState(141);
				match(PHRASE_NUM);
				}
				break;
			case 3:
				{
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Subtraction) {
					{
					setState(142);
					match(Subtraction);
					}
				}
